--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <script src="@routes.Assets.at("build/elm.js")"></script>
+        <link rel="stylesheet" type="text/css" href="@routes.Assets.at("style.css")"/>
     </head>
     <body>
         <div id="elm-app">
