Add material UI dependencies

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,9 +3,12 @@
   <head>
     <title>Support Admin Console</title>
     <link rel="stylesheet" type="text/css" href="@routes.Assets.at("style.css")"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
   </head>
   <body>
     <div id="root"></div>
     <script src="@routes.Assets.at("build/app.bundle.js")"></script>
-</body>
+  </body>
 </html>
