Add preview to epic and refactor to get stage from server

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,3 +1,4 @@
+@(stage: String)
 <!DOCTYPE html>
 <html>
   <head>
@@ -10,5 +11,8 @@
   <body>
     <div id="root"></div>
     <script src="@routes.Assets.at("build/app.bundle.js")"></script>
+    <script>
+      window.guardian = { stage: "@stage"};
+    </script>
   </body>
 </html>
