--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(stage: String)
+@(stage: String, jsLocation: String)
 <!DOCTYPE html>
 <html>
   <head>
@@ -15,6 +15,6 @@
     <script>
       window.guardian = { stage: "@stage"};
     </script>
-    <script src="@routes.Assets.versioned("build/app.bundle.js")"></script>
+    <script src="@jsLocation"></script>
   </body>
 </html>
