--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(stage: String)
+@(stage: String, sdcUrlOverride: Option[String])
 <!DOCTYPE html>
 <html>
   <head>
@@ -13,7 +13,11 @@
   <body>
     <div id="root"></div>
     <script>
-      window.guardian = { stage: "@stage"};
+      window.guardian = {};
+      window.guardian.stage = "@stage";
+      @if(sdcUrlOverride.isDefined) {
+        window.guardian.sdcUrlOverride = "@sdcUrlOverride.get";
+      }
     </script>
     <script src="@routes.Assets.at("build/app.bundle.js")"></script>
   </body>
