--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -20,5 +20,6 @@
       }
     </script>
     <script src="@routes.Assets.at("build/app.bundle.js")"></script>
+      <!-- build-commit-id: @app.BuildInfo.gitCommitId -->
   </body>
 </html>
